--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
       <title>{{ title }}</title>
+      <link rel="stylesheet" href="static/styles.css"> 
   </head>
   <body>
     {{ content }} 
