--- a/templates/videochat.html
+++ b/templates/videochat.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title> OpenTok Getting Started </title>
-    <link href="booking.css" rel="stylesheet" type="text/css">
+  <title>{{ title }} </title>
+    <link href="static/videochat.css" rel="stylesheet" type="text/css">
     <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
 </head>
 <body>
@@ -11,6 +12,6 @@
         <div id="publisher"></div>
     </div>
 
-    <script type="text/javascript" src="booking.js"></script>
+    <script type="text/javascript" src="static/videochat.js"></script>
 </body>
 </html>
