--- a/templates/patient.html
+++ b/templates/patient.html
@@ -11,10 +11,10 @@
     <img src="sos.jpg" onclick="makeACall()" alt="SOS" style="width:570px;height:600px;">
     <!--<button onclick="makeACall()">Click here</button>-->
     <br>
-    <button onclick="UberRestFulApi()">CALL EMERGENCY RESPONSE VECHILE</button>
+    <a href="http://13.126.171.111:5000/videochat">CALL EMERGENCY RESPONSE VECHILE</a>
     <br>
     <div id="link" style="display:none">
-      <iframe src="http://127.0.0.1:5000/videochat" height="570px" width="1300px">
+      <iframe src="http://13.126.171.111:5000/videochat" height="570px" width="1300px">
       </iframe>
     </div>
 
