--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <head>
       <title>EMRP</title>
          <meta name="viewport" content="width=device-width">
-      <link rel="stylesheet" href="angular-material.css">
+      <link rel="stylesheet" href="static/angular-material.css">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-animate.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-route.min.js"></script>
@@ -12,7 +12,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-messages.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.js"></script>
 
-<script  src="angular_material.js"></script>
+<script  src="static/angular_material.js"></script>
 
  <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
 <script>
@@ -579,13 +579,13 @@ if(rr == true){
       </div>
     </md-toolbar>
     <div>
-    <img  style="width:100%" src="banner.jpg"/>
+    <img  style="width:100%" src="static/banner.jpg"/>
     </div>
-    <md-button  class="md-raised md-warn" style="width:95%;margin-top:5%">SOS</md-button>
+    <md-button  class="md-raised md-warn" style="width:95%;margin-top:5%" href="https://13.126.171.111:5000/videochat">SOS</md-button>
     
     <br>
     <div id="link" style="display:none">
-      <iframe src="http://127.0.0.1:5000/videochat" height="570px" width="1300px">
+      <iframe src="http://13.126.171.111:5000/videochat" height="570px" width="1300px">
       </iframe>
     </div>
 
